--- a/src/app/features/orders/shared/order-item/order-item.component.html
+++ b/src/app/features/orders/shared/order-item/order-item.component.html
@@ -2,7 +2,7 @@
   <div class="d-flex align-items-center">
      <app-input-checkbox  [value]="order.code" [id]="order.code" (checked)="getOrderCode($event)"></app-input-checkbox>
   <div class="row align-items-center flex-grow-1" (click)="showOrder(order.id)">
-    <div class="col-8 col-md-6 col-lg-8 col-xl-9 col-xxl-9 text-start">
+    <div class="col-8 col-md-6 col-lg-7 col-xl-8  text-start">
        <app-client-info [order]=order [additionalInfo]="order.code" [flexGrow]="true" (checkedItemCode)="getOrderCode($event)">
           <span class="small d-flex align-items-center  text-secondary">
         <i
@@ -19,15 +19,21 @@
           </span>
      </app-client-info>
     </div>
-    <div class="col-4 col-md-6 col-lg-4 col-xl-3  col-xxl-3">
+    <div class="col-4 col-md-6 col-lg-5 col-xl-4">
        <div class="row ">
-      <div class="col-12 col-lg-6 text-end text-lg-center">
+      <div class="col-12  col-lg-5 text-end text-lg-center">
         <span class="small">
           {{order.grossTotal}} {{currency | translate}}
         </span>
       </div>
-      <div class="col-12 col-lg-6 text-end text-lg-center">
+      <div class="col-12 col-lg-4 text-end text-lg-center">
         <span class="fs-verySmall text-secondary">{{'since' | translate}} {{timeDifference.value}} {{timeDifference.unit | translate}}</span>
+      </div>
+         <div class="col-12 col-lg-3 text-end text-lg-center">
+        <span class="fs-verySmall text-secondary">
+          <i class="fa-solid fa-print fa-xl pe-4" (click)="printOrder()"></i>
+           <i class="fa-solid fa-right-left fa-xl" (click)="returnOrder()"></i>
+          </span>
       </div>
     </div>
     </div>
