finish order module

--- a/src/app/features/orders/shared/home-payment/home-payment.component.html
+++ b/src/app/features/orders/shared/home-payment/home-payment.component.html
@@ -67,6 +67,7 @@
          [order]="order"
          [inputMap]="inputMap"
         (mustBePaid)="setMustbePaid($event)"
+        (clearCustomer)="clearCustomerFn()"
         [getPaidAmount]="getPaidAmount.bind(this)"></app-payment-buttons>
       </div>
       <!-- <div class="col-12">
