--- a/src/app/features/products/products.component.html
+++ b/src/app/features/products/products.component.html
@@ -1,1 +1,19 @@
-<p>products works!</p>
+<div class="h-100 w-100">
+<app-layout
+[items]="products()"
+[sortKey]="'price'"
+[header]="'Add New Products' |translate"
+[subTitle]="'Start by stocking your store with products your customers will love' | translate"
+[BtnName]="'Add New Product'"
+(addNewVar)="addNew($event)"
+(deleteSelected)="deleteSelected($event)" >
+
+      <div class="row gy-3">
+        <div class="col-12 col-md-6 col-xl-4 col-xxl-3" *ngFor="let product of products()">
+          <div>
+             <app-product-card [product]="product"  [type]="type" (deleteProduct)="deleteNewProduct($event)" ></app-product-card>
+          </div>
+        </div>
+      </div>
+</app-layout>
+</div>
