add translation pipe

--- a/src/app/shared/components/dropdown/dropdown.component.html
+++ b/src/app/shared/components/dropdown/dropdown.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex flex-column">
   <div class="pb-1" *ngIf="title">
-  <span class="small">{{title}}</span>
+  <span class="small">{{title | translate}}</span>
 </div>
 <div class="btn-group " [class.border]="title">
             <button
@@ -21,7 +21,7 @@
             <!-- Dropdown Menu -->
             <ul class="dropdown-menu w-100">
               <li *ngIf="optionsArray.length === 0">
-                <a class="dropdown-item fs-verySmall">No Categories</a>
+                <a class="dropdown-item fs-verySmall">{{'No Categories' | translate}}</a>
               </li>
               <li *ngFor="let option of optionsArray" (click)="selectOption(option)">
                 <a class="dropdown-item fs-verySmall">{{ option[key] |translate | titlecase }}</a>
