--- a/src/app/features/products/products.component.html
+++ b/src/app/features/products/products.component.html
@@ -11,7 +11,7 @@
       <div class="row gy-3">
         <div class="col-12 col-md-6 col-xl-4 col-xxl-3" *ngFor="let product of products()">
           <div>
-             <app-product-card [product]="product"  [type]="type" (deleteProduct)="deleteNewProduct($event)" ></app-product-card>
+             <app-product-card [product]="product"  [type]="type()" (deleteProduct)="deleteNewProduct($event)" ></app-product-card>
           </div>
         </div>
       </div>
