make currnecy dynamic

--- a/src/app/features/products/product-card/product-card.component.html
+++ b/src/app/features/products/product-card/product-card.component.html
@@ -42,12 +42,23 @@
         </app-input>
       </div>
 
+        <div class="col-12">
+        <app-input
+          id="productArabicTitle"
+          placeholder="Enter Product Arabic Name"
+          [hideLabel]="true"
+          vertCLass="col-12"
+          #productArabicTitle
+        >
+          <i class="fa-solid fa-box-open"></i>
+        </app-input>
+      </div>
       <!-- Price -->
       <div class="col-12">
         <app-input
           id="price"
           type="number"
-          spanLabel="SAR"
+          [spanLabel]="currency | translate "
           placeholder="Price"
           [inputGroup]="true"
           [hideLabel]="true"
