--- a/src/app/features/orders/shared/home-payment/home-payment.component.html
+++ b/src/app/features/orders/shared/home-payment/home-payment.component.html
@@ -19,7 +19,7 @@
                 [id]="method.focusKey"
                 type="text"
                 [spanLabel]="currency | translate "
-                placeholder="'0.00'"
+                placeholder="0.00"
                 [inputGroup]="true"
                 [hideLabel]="true"
                 [vertCLass]="'col-12'"
@@ -70,25 +70,6 @@
         (clearCustomer)="clearCustomerFn()"
         [getPaidAmount]="getPaidAmount.bind(this)"></app-payment-buttons>
       </div>
-      <!-- <div class="col-12">
-        <div class="row gy-2">
-          <div class="col-12">
-            <button class="btn w-100 bg-dark text-light" (click)="pay_Order()">Pay</button>
-          </div>
-
-          <div class="col-12">
-            <div class="row gx-2">
-              <div class="col-6">
-                <button class="btn w-100 bg-secondary text-light" (click)="hold_Order()">Hold</button>
-              </div>
-              <div class="col-6">
-                <button class="btn w-100 bg-danger text-light" (click)="cancal_Order()">Cancel</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div> -->
-
     </div>
   </div>
 </div>
