--- a/src/app/features/products/variant-options-values-quantity/variant-options-values-quantity.component.html
+++ b/src/app/features/products/variant-options-values-quantity/variant-options-values-quantity.component.html
@@ -32,7 +32,7 @@
                   </ng-container>
                 </div>
               </div>
-              <span class="fs-verySmall">Available No: {{variant.details.quantity}}</span>
+              <span class="fs-verySmall">{{'Available No' | translate}}: {{variant.details.quantity}}</span>
             </div>
           </button>
         </h2>
