--- a/src/app/features/products/variant-value-details/variant-value-details.component.html
+++ b/src/app/features/products/variant-value-details/variant-value-details.component.html
@@ -2,7 +2,7 @@
   <div class="col-12">
         <app-input
           id="price"
-          type="number"
+          type="text"
           spanLabel="SAR"
           placeholder="Price"
           [inputGroup]="true"
@@ -16,7 +16,7 @@
        <div class="col-12 col-md-6">
         <app-input
           id="costPrice"
-          type="number"
+          type="text"
           spanLabel="SAR"
           placeholder="Cost Price"
           [inputGroup]="true"
@@ -30,7 +30,7 @@
        <div class="col-12 col-md-6">
         <app-input
           id="salePrice"
-          type="number"
+          type="text"
           spanLabel="SAR"
           placeholder="Sale Price"
           [inputGroup]="true"
@@ -44,7 +44,7 @@
        <div class="col-12 col-md-4">
         <app-input
           id="weight"
-          type="number"
+          type="text"
           spanLabel="Kg"
           placeholder="Weight"
           [inputGroup]="true"
