--- a/src/app/shared/components/navitem/navitem.component.html
+++ b/src/app/shared/components/navitem/navitem.component.html
@@ -18,7 +18,7 @@
   </div>
 </ng-container>
 
-<ng-container *ngIf="['Hold_Orders', 'Return_Order', 'End_Day','Arabic','اللغة الإنجليزية'].includes(navItemName)">
+<ng-container *ngIf="['Hold_Orders', 'Return_Order', 'End_Day','Arabic','اللغة الإنجليزية','Add_Variant'].includes(navItemName)">
   <div class="d-flex align-items-center rounded px-3 mb-2 rounded-4 hover-bg"
        [ngClass]="classes"
        [class.justify-content-center]="isCollapsed"
@@ -28,7 +28,7 @@
   </div>
 </ng-container>
 
-<ng-container *ngIf="!['Shopping', 'Hold_Orders', 'Return_Order', 'End_Day','Arabic','اللغة الإنجليزية'].includes(navItemName)">
+<ng-container *ngIf="!['Shopping', 'Hold_Orders', 'Return_Order', 'End_Day','Arabic','اللغة الإنجليزية','Add_Variant'].includes(navItemName)">
   <div class="d-flex align-items-center px-3 mb-2 rounded rounded-4 hover-bg"
        [ngClass]="classes"
        [class.justify-content-center]="isCollapsed"
