add translate pipe

--- a/src/app/shared/components/site-button/site-button.component.html
+++ b/src/app/shared/components/site-button/site-button.component.html
@@ -2,5 +2,5 @@
 class="btn bg-semi-dark fs-medium text-light d-flex align-items-center"
 [routerLink]="route"  [class.flex-row-reverse]="iconDir=='last'">
 <ng-content #name></ng-content>
-<span>{{BtnName}}</span>
+<span>{{BtnName | translate}}</span>
 </button>
